# inverted-index

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/dataset/test/neg/: document1.txt
document_parser_lib/: CMakeLists.txt  document_parser.cpp  document_parser.h
enums_lib/: processing_type.h
google_tests/: CMakeLists.txt  document_parser_test.cpp  inverted_index_test.cpp  server_test.cpp  thread_pool_test.cpp
google_tests/lib/googlemock/include/gmock/: gmock-actions.h  gmock-matchers.h
google_tests/lib/googletest/include/gtest/: gtest-printers.h  gtest-test-part.h  gtest-typed-test.h  gtest.h
google_tests/lib/googletest/include/gtest/internal/: gtest-internal.h  gtest-param-util.h
google_tests/lib/googletest/src/: gtest-death-test.cc  gtest-internal-inl.h  gtest-port.cc  gtest-test-part.cc  gtest.cc
interfaces/: CMakeLists.txt  thread_pool_interface.h
inverted_index_lib/: CMakeLists.txt  inverted_index.cpp  inverted_index.h  json.hpp
server_lib/: CMakeLists.txt  server.cpp  server.h
thread_pool_lib/: CMakeLists.txt  thread_pool.cpp  thread_pool.h
